--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Tigertech Github Site</title>
+    <title>Tigertech <sub>(Github Hosted)</sub></title>
   </head>
 
   <body>
