--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
+    <div id="main_content_wrap" class="outer" style="min-height:500;">
       <section id="main_content" class="inner">
         <p>This is the Globally viewable site hosted on Github.</p>
 
