--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Tigertech <sub>(Github Hosted)</sub></title>
+    <title>Tigertech</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/CamrynD/TigerTech-Global">View on GitHub</a>
 
-          <h1 id="project_title">Tigertech Github Site</h1>
+          <h1 id="project_title">Tigertech <sub>(Github Hosted)</sub></h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
